--- a/style/MediaQueries.css
+++ b/style/MediaQueries.css
@@ -10,12 +10,6 @@
       list-style: none;
     }
     
-    .Nav_bar{
-      font-family: 'Times New Roman', Times, serif;
-      height: 80px;
-      list-style: none;
-    }
-     
     .nav_bar li ul{
       display: inline-block;
       padding: .5cm;
@@ -40,7 +34,29 @@
       width: 100%;
       padding:0;
       margin-left: 0px;
+    }
+    
+    nav.navbar li a{
+      display: block;
+      color: #fff;
+      text-align: center;
+      font-weight: bold;
+      text-decoration: none;
+      width: 100px;
+      padding: 10px 0px 8px 0px;
+      border-radius: 4px;
+    }
 
+    li a{
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+
+    li a:hover{
+      background-color: #111;
     }
   }
 
